AX: Implement support for new ARIA roles: code, strong, emphasis, generic https://bugs.webkit.org/show_bug.cgi?id=203257

Reviewed by Chris Fleizach.

Source/WebCore:

Create new internal AccessibilityRole types for the new roles.
Treat code, strong, and emphasis as internal format style groups,
which are equivalent to their corresponding HTML elements.

No new tests. Instead, added new roles to existing tests and updated
expectations.

* accessibility/AccessibilityObject.cpp:
(WebCore::initializeRoleMap):
(WebCore::AccessibilityObject::isStyleFormatGroup const):
* accessibility/AccessibilityObjectInterface.h:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):
* accessibility/atk/WebKitAccessible.cpp:
(atkRole):
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper determineIsAccessibilityElement]):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(createAccessibilityRoleMap):
(-[WebAccessibilityObjectWrapper subrole]):

LayoutTests:

Add new roles to existing role-related tests and update expectations.

* accessibility/gtk/xml-roles-exposed-expected.txt:
* accessibility/gtk/xml-roles-exposed.html:
* accessibility/roles-computedRoleString.html:
* accessibility/roles-exposed.html:
* platform/gtk/accessibility/gtk/xml-roles-exposed-expected.txt:
* platform/gtk/accessibility/roles-computedRoleString-expected.txt:
* platform/gtk/accessibility/roles-exposed-expected.txt:
* platform/mac-wk2/accessibility/roles-exposed-expected.txt:
* platform/mac/accessibility/roles-computedRoleString-expected.txt:
* platform/mac/accessibility/roles-exposed-expected.txt:


Canonical link: https://commits.webkit.org/216706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251469 268f45cc-cd09-0410-ab3c-d52691b4dbfc